Added ChartActivity and PieChartFrag for displaying a pie chart. Added necessary rec files.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity android:name=".DataMovement.BasicExampleActivity" />
         <activity android:name=".DataMovement.FragmentExampleActivity" />
         <activity android:name=".DataMovement.DataCollectionActivity" />
-        <activity android:name=".RecyclerView.RecyclerViewActivity"></activity>
+        <activity android:name=".RecyclerView.RecyclerViewActivity" />
+        <activity android:name=".ChartActivity"></activity>
     </application>
 
 </manifest>
