--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".DataMovement.FragmentExampleActivity" />
         <activity android:name=".DataMovement.DataCollectionActivity" />
         <activity android:name=".RecyclerView.RecyclerViewActivity" />
-        <activity android:name=".Charts.ChartActivity"></activity>
+        <activity android:name=".Charts.ChartActivity" />
+        <activity android:name=".Network.NetworkActivity"></activity>
     </application>
 
 </manifest>
