--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.valdeslab.learningapp">
+          package="com.example.valdeslab.learningapp">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
@@ -21,18 +23,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".NavigationActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DataMovement.BasicExampleActivity" />
-        <activity android:name=".DataMovement.FragmentExampleActivity" />
-        <activity android:name=".DataMovement.DataCollectionActivity" />
-        <activity android:name=".RecyclerView.RecyclerViewActivity" />
-        <activity android:name=".Charts.ChartActivity" />
-        <activity android:name=".Network.NetworkActivity" />
-        <activity android:name=".Kiosk.KioskActivity"></activity>
+        <activity android:name=".DataMovement.BasicExampleActivity"/>
+        <activity android:name=".DataMovement.FragmentExampleActivity"/>
+        <activity android:name=".DataMovement.DataCollectionActivity"/>
+        <activity android:name=".RecyclerView.RecyclerViewActivity"/>
+        <activity android:name=".Charts.ChartActivity"/>
+        <activity android:name=".Network.NetworkActivity"/>
+        <activity android:name=".Kiosk.KioskActivity"/>
+        <activity android:name=".Bluetooth.BluetoothActivity">
+        </activity>
     </application>
 
 </manifest>
